--- a/projectsearch.html
+++ b/projectsearch.html
@@ -4,25 +4,39 @@
 <head>
     <meta charset="utf-8">
     <title>Judyta Włodarska</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="dist/css/main.css">
 </head>
+
 <body ng-app="app">
     <main ng-controller="searchCtrl">
         <div class="container">
             <div class="row">
-                <div class="text-danger" ng-show="errorbox">
-                    Nie ma takiegu usera na githubie:(
+                <header>
+                    <h1>Wyszukiwarka projektów</h1>
+                </header>
+                <div class="well text-danger" ng-show="errorbox">
+                    Nie ma takiego usera na githubie :(
                 </div>
                 <div class="form-group">
-                    <h2>Projekty {{user}}</h2>
                     <div class="input-group input-group-lg">
                         <span class="input-group-addon" id="sizing-addon1">Szukaj dla</span>
                         <input type="text" class="form-control" name="" value="" ng-model="user" ng-change="check()" aria-describedby="sizing-addon1">
                     </div>
                 </div>
-                <div ng-repeat="project in data | limitTo:5">
-                    <div class="col-xs-12 col-sm-12 list-group-item">
-                        <h2>Nazwa projektu: {{project.name}}</h2> {{project.id}} {{project.description}}
+                <div class="wrapper" ng-show="details">
+                    <h2>Projekty {{user}}</h2>
+                    <div ng-repeat="project in data | limitTo:5">
+                        <div class="col-xs-12 col-sm-12 list-group-item">
+                            <h2>Nazwa projektu: {{project.name}}</h2>
+                            <ul class="project__desc">
+                                <li>Id: {{project.id}}</li>
+                                <li>Opis projektu: {{project.description}}</li>
+                                <li>Link do projektu: <a href="{{project.html_url}}" target="_blank">{{project.name}}</a></li>
+                                <li>Data utworzenia: {{project.created_at | date : "dd.MM.y" }}</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
